--- a/placement_management_system/css/view_company.css
+++ b/placement_management_system/css/view_company.css
@@ -41,13 +41,14 @@ button{
 
 
   th{
-    background-color:lightgreen;
+    background-color:#d2691e;
     border: 2px black solid;
     text-align: center;
+    color: beige;
   }
 
   td{
-   background-color:lightblue;
+   background-color:lightgoldenrodyellow;
    border: 2px black solid;
   }
 
