--- a/placement_management_system/css/view_users.css
+++ b/placement_management_system/css/view_users.css
@@ -86,26 +86,33 @@
       justify-content: space-around;
   }
   
-  
-  th{
-    background-color:#d2691e;
+
+th{
+    background-color:#2b2929;
     border: 2px black solid;
     text-align: center;
     color: beige;
   }
 
   td{
-   background-color:lightgoldenrodyellow;
-   border: 2px black solid;
+     border: 2px black solid;
   }
-  
-  tr{
-      height:auto;
-      width: 100%;
-      word-wrap: break-word;
-      border: 2px black solid;
-  }
-  
+
+tr:nth-child(even){
+    height:auto;
+    width: 100%;
+    word-wrap: break-word;
+    border: 2px black solid;
+    background-color:rgb(255, 255, 232);
+}
+
+tr:nth-child(odd){
+    height:auto;
+    width: 100%;
+    word-wrap: break-word;
+    border: 2px black solid;
+    background-color:rgb(213, 213, 169);
+}  
   
   table{
       border: 2px black solid;
